# bazel_conduit

./: .gitignore  BEP_TO_OTEL_DESIGN.md  BUILD.bazel  CONTRIBUTING.md  LICENSE  LICENSE-3rdparty.csv  MODULE.bazel  NOTES.md  NOTICE  README.md  RUST_CONDUIT_PLAN.md  go.mod  go.sum
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml
cmd/conduit/: BUILD.bazel  main.go
dev/: docker-compose.yml
integration/: BUILD.bazel  README.md  analyze_trace.py  bep_sample.ndjson  run_full_trace_scenario.sh  trace_test.sh
internal/bes/: BUILD.bazel  attributes.go  attributes_test.go  build_event_parser.go  build_event_parser_test.go  exporter.go  exporter_test.go  json_exporter.go  json_exporter_test.go  namedset_cache.go  namedset_cache_test.go  service.go  span_registry.go  span_registry_test.go  trace_context.go  trace_context_test.go
internal/graph/: BUILD.bazel  graph.go  graph_test.go  manager.go  manager_test.go
internal/translator/: BUILD.bazel  otel_writer.go  otel_writer_test.go  translator.go  translator_test.go
internal/writer/: BUILD.bazel  json_writer.go  json_writer_test.go
proto/build_event_stream/: BUILD.bazel  build_event_stream.proto
proto/google/api/: BUILD.bazel  annotations.proto  field_behavior.proto  http.proto
proto/spawn/: BUILD.bazel  spawn.proto
rust/conduit/: BUILD.bazel  Cargo.toml
rust/conduit/src/: exec_log.rs  lib.rs  main.rs
rust/conduit/src/bep/: decoder.rs  mod.rs  router.rs
rust/conduit/src/exec_log/: binary.rs  compact.rs  mod.rs  tailer.rs
rust/conduit/src/grpc/: mod.rs  server.rs
rust/conduit/src/otel/: attributes.rs  mapper.rs  mod.rs  redact.rs  trace_context.rs
rust/conduit/src/otel/mapper/: action_attrs.rs  actions.rs  fetch_tests.rs  finalization.rs  lifecycle.rs  metadata_handlers.rs  metrics.rs  progress.rs  targets.rs  test_attrs.rs  tests.rs  utils.rs
rust/conduit/src/state/: action_mode.rs  build_state.rs  mod.rs
rust/conduit/tests/: action_mode_tests.rs  decoder_tests.rs  router_tests.rs
scripts/: README.md  setup_datadog_agent.sh
toolchain/: BUILD.bazel
