module(
    name = "bazel_conduit",
    version = "0.1.0",
)

# =============================================================================
# Core Bazel dependencies
# =============================================================================
bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(name = "platforms", version = "1.0.0")

# =============================================================================
# Protocol Buffers
# =============================================================================
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "protobuf", version = "29.3")

# =============================================================================
# Rust
# =============================================================================
bazel_dep(name = "rules_rust", version = "0.66.0")

# Rust toolchain
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    versions = ["1.93.0"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

# =============================================================================
# Rust Prost (protobuf support)
# =============================================================================
bazel_dep(name = "rules_rust_prost", version = "0.66.0")

# =============================================================================
# rules_rs - faster crate_universe reimplementation
# https://github.com/dzbarsky/rules_rs
# =============================================================================
bazel_dep(name = "rules_rs", version = "0.0.27")

crate = use_extension("@rules_rs//rs:extensions.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lock = "//rust/conduit:Cargo.lock",
    cargo_toml = "//rust/conduit:Cargo.toml",
    platform_triples = [
        "aarch64-apple-darwin",
        "x86_64-apple-darwin",
        "aarch64-unknown-linux-gnu",
        "x86_64-unknown-linux-gnu",
    ],
)
use_repo(crate, "crates")
