# Integration tests for conduit: BEP -> trace, no performance regression.
# Uses minimal BEP sample (no live Bazel build) for hermetic, fast test.

sh_test(
    name = "trace_test",
    srcs = ["trace_test.sh"],
    data = [
        "//rust/conduit:conduit",
        "analyze_trace.py",
        "bep_sample.ndjson",
    ],
    args = [
        "$(location //rust/conduit:conduit)",
        "$(location bep_sample.ndjson)",
        "$(location analyze_trace.py)",
    ],
    tags = ["integration"],
)
