load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "bes",
    srcs = [
        "build_event_parser.go",
        "service.go",
    ],
    importpath = "github.com/JSGette/bazel_conduit/internal/bes",
    visibility = ["//:__subpackages__"],
    deps = [
        "//:go_build_proto",
        "//internal/graph",
        "//proto/build_event_stream",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//types/known/emptypb",
    ],
)

go_test(
    name = "bes_test",
    srcs = ["build_event_parser_test.go"],
    embed = [":bes"],
    deps = [
        "//:go_build_proto",
        "//proto/build_event_stream",
        "@org_golang_google_protobuf//types/known/anypb",
    ],
)
