load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "bes",
    srcs = [
        "build_event_parser.go",
        "service.go",
    ],
    importpath = "github.com/JSGette/bazel_conduit/internal/bes",
    visibility = ["//:__subpackages__"],
    deps = [
        "//:go_build_proto",
        "//proto/build_event_stream",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel//codes",
        "@io_opentelemetry_go_otel//semconv/v1.28.0:v1_28_0",
        "@io_opentelemetry_go_otel_sdk//resource",
        "@io_opentelemetry_go_otel_sdk//trace",
        "@io_opentelemetry_go_otel_trace//:trace",
        "@org_golang_google_protobuf//types/known/emptypb",
    ],
)

go_test(
    name = "bes_test",
    srcs = ["build_event_parser_test.go"],
    embed = [":bes"],
    deps = [
        "//:go_build_proto",
        "//proto/build_event_stream",
        "@io_opentelemetry_go_otel_sdk//trace",
        "@io_opentelemetry_go_otel_sdk//trace/tracetest",
        "@org_golang_google_protobuf//types/known/anypb",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
