load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "graph",
    srcs = [
        "graph.go",
        "manager.go",
    ],
    importpath = "github.com/JSGette/bazel_conduit/internal/graph",
    visibility = ["//:__subpackages__"],
    deps = [
        "//:go_build_proto",
        "@com_github_google_uuid//:uuid",
        "@io_opentelemetry_go_otel_trace//:trace",
        "@org_golang_google_protobuf//types/known/anypb",
    ],
)

go_test(
    name = "graph_test",
    srcs = [
        "graph_test.go",
        "manager_test.go",
    ],
    embed = [":graph"],
    deps = ["//:go_build_proto"],
)
