load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "translator",
    srcs = [
        "otel_writer.go",
        "translator.go",
    ],
    importpath = "github.com/JSGette/bazel_conduit/internal/translator",
    visibility = ["//:__subpackages__"],
    deps = [
        "//:go_build_proto",
        "//proto/build_event_stream",
        "@io_opentelemetry_go_otel_trace//:trace",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//types/known/anypb",
    ],
)

go_test(
    name = "translator_test",
    srcs = [
        "otel_writer_test.go",
        "translator_test.go",
    ],
    embed = [":translator"],
    deps = [
        "//:go_build_proto",
        "@io_opentelemetry_go_otel_trace//:trace",
        "@org_golang_google_protobuf//types/known/anypb",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
