load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "writer",
    srcs = ["json_writer.go"],
    importpath = "github.com/JSGette/bazel_conduit/internal/writer",
    visibility = ["//:__subpackages__"],
    deps = [
        "//:go_build_proto",
        "@org_golang_google_protobuf//encoding/protojson",
    ],
)

go_test(
    name = "writer_test",
    srcs = ["json_writer_test.go"],
    embed = [":writer"],
    deps = [
        "//:go_build_proto",
        "@org_golang_google_protobuf//types/known/anypb",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
