load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_rust_prost//:defs.bzl", "rust_prost_library")

# Proto library for build_event_stream
proto_library(
    name = "build_event_stream_proto",
    srcs = ["build_event_stream.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//proto/build_event_stream/deps:deps_proto",
        "@protobuf//:any_proto",
        "@protobuf//:duration_proto",
        "@protobuf//:timestamp_proto",
    ],
)

# Rust prost library
rust_prost_library(
    name = "build_event_stream_rust_proto",
    proto = ":build_event_stream_proto",
    visibility = ["//visibility:public"],
)
