load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")

package(default_visibility = ["//visibility:public"])

# Export Cargo files for rules_rs
exports_files([
    "Cargo.toml",
    "Cargo.lock",
])

rust_library(
    name = "conduit_lib",
    srcs = glob(["src/**/*.rs"], exclude = ["src/main.rs"]),
    deps = [
        "//proto/build_event_stream:build_event_stream_rust_proto",
        "//proto/google/devtools/build/v1:publish_build_event_rust_proto",
        "@crates//:anyhow",
        "@crates//:clap",
        "@crates//:dashmap",
        "@crates//:opentelemetry",
        "@crates//:opentelemetry-otlp",
        "@crates//:opentelemetry_sdk",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:thiserror",
        "@crates//:tokio",
        "@crates//:tokio-stream",
        "@crates//:tracing",
        "@crates//:tracing-subscriber",
        "@crates//:uuid",
    ],
)

rust_binary(
    name = "conduit",
    srcs = ["src/main.rs"],
    deps = [
        ":conduit_lib",
        "@crates//:anyhow",
        "@crates//:clap",
        "@crates//:tokio",
        "@crates//:tracing",
        "@crates//:tracing-subscriber",
    ],
)

rust_test(
    name = "conduit_lib_test",
    crate = ":conduit_lib",
)
