load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")

package(default_visibility = ["//visibility:public"])

# Export Cargo files for rules_rs
exports_files([
    "Cargo.toml",
    "Cargo.lock",
])

rust_library(
    name = "conduit_state",
    crate_name = "conduit_state",
    crate_root = "src/state/mod.rs",
    srcs = [
        "src/state/action_mode.rs",
        "src/state/build_state.rs",
        "src/state/mod.rs",
    ],
    deps = [
        "@crates//:dashmap",
        "@crates//:serde_json",
    ],
)

rust_library(
    name = "conduit_otel_attributes",
    crate_name = "conduit_otel_attributes",
    crate_root = "src/otel/attributes.rs",
    srcs = ["src/otel/attributes.rs"],
)

rust_library(
    name = "conduit_otel_redact",
    crate_name = "conduit_otel_redact",
    crate_root = "src/otel/redact.rs",
    srcs = ["src/otel/redact.rs"],
)

rust_library(
    name = "conduit_otel_trace_context",
    crate_name = "conduit_otel_trace_context",
    crate_root = "src/otel/trace_context.rs",
    srcs = ["src/otel/trace_context.rs"],
    deps = [
        "@crates//:anyhow",
        "@crates//:opentelemetry",
        "@crates//:opentelemetry-otlp",
        "@crates//:opentelemetry-stdout",
        "@crates//:opentelemetry_sdk",
        "@crates//:uuid",
    ],
)

rust_library(
    name = "conduit_lib",
    srcs = [
        "src/bep/decoder.rs",
        "src/bep/mod.rs",
        "src/bep/router.rs",
        "src/exec_log/compact.rs",
        "src/exec_log/mod.rs",
        "src/exec_log/tailer.rs",
        "src/grpc/mod.rs",
        "src/grpc/server.rs",
        "src/lib.rs",
        "src/otel/mapper.rs",
        "src/otel/mapper/action_attrs.rs",
        "src/otel/mapper/actions.rs",
        "src/otel/mapper/fetch_tests.rs",
        "src/otel/mapper/finalization.rs",
        "src/otel/mapper/lifecycle.rs",
        "src/otel/mapper/metadata_handlers.rs",
        "src/otel/mapper/metrics.rs",
        "src/otel/mapper/progress.rs",
        "src/otel/mapper/targets.rs",
        "src/otel/mapper/test_attrs.rs",
        "src/otel/mapper/tests.rs",
        "src/otel/mapper/utils.rs",
        "src/otel/mod.rs",
    ],
    deps = [
        "//proto/build_event_stream:build_event_stream_rust_proto",
        "//proto/google/devtools/build/v1:publish_build_event_rust_proto",
        "//proto/spawn:spawn_rust_proto",
        ":conduit_otel_attributes",
        ":conduit_otel_redact",
        ":conduit_otel_trace_context",
        ":conduit_state",
        "@crates//:anyhow",
        "@crates//:bytes",
        "@crates//:clap",
        "@crates//:opentelemetry",
        "@crates//:opentelemetry-otlp",
        "@crates//:opentelemetry-stdout",
        "@crates//:opentelemetry_sdk",
        "@crates//:prost",
        "@crates//:prost-types",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:thiserror",
        "@crates//:tokio",
        "@crates//:tokio-stream",
        "@crates//:tonic",
        "@crates//:tracing",
        "@crates//:tracing-subscriber",
        "@crates//:uuid",
        "@crates//:zstd",
    ],
)

rust_binary(
    name = "conduit",
    srcs = ["src/main.rs"],
    deps = [
        ":conduit_lib",
        "@crates//:anyhow",
        "@crates//:clap",
        "@crates//:opentelemetry",
        "@crates//:tokio",
        "@crates//:tracing",
        "@crates//:tracing-subscriber",
    ],
)

rust_test(
    name = "conduit_lib_test",
    crate = ":conduit_lib",
    deps = [
        "@crates//:tempfile",
    ],
)

rust_test(
    name = "decoder_tests",
    srcs = ["tests/decoder_tests.rs"],
    deps = [
        ":conduit_lib",
        "@crates//:serde_json",
    ],
)

rust_test(
    name = "action_mode_tests",
    srcs = ["tests/action_mode_tests.rs"],
    deps = [
        ":conduit_lib",
    ],
)

rust_test(
    name = "router_tests",
    srcs = ["tests/router_tests.rs"],
    deps = [
        ":conduit_lib",
        "@crates//:serde_json",
    ],
)
