[package]
name = "conduit"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
description = "BEP to OpenTelemetry trace converter"

[dependencies]
# OTel
opentelemetry = "0.27"
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }

# Async
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# Concurrency
dashmap = "6"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"

[build-dependencies]
